@@ -1,3 +1,7 @@
+2000-06-26  Per Bothner  <per@bothner.com>
+
+	* BufferKeymap.java (toString(KeyStroke)):  New static method.
+
 2000-06-19  Per Bothner  <per@bothner.com>
 
 	* package.html:  Point to www.JEmacs.net.
